# eigsep_sim

./: README.md  pyproject.toml
benchmarks/: beam_interp.py
notebooks/: EIGSEP_Simulations.ipynb  Lunar Occultation.ipynb  Lunar Orbit Geometry.ipynb  Lunar Orbit Mock.ipynb  Lunar Orbit Multi Freq.ipynb  Lunar Orbit Single Freq.ipynb  Lunar Orbiter.ipynb  beam_cal_verify.py  bloom_config.yaml  bloom_setup.py  lunar_dipole.py  lunar_spinner.py  lunar_stm.py  sim_cache.py  test_multifreq.py  tumbling_beam_verify.py
src/: __init__.py  _observer.py  beam.py  const.py  earth_surface.py  healpix.py  hpm.py  linear_solver.py  lunar_orbit.py  lunar_surface.py  models.py  models_21cm.npz  sim.py  sim_jax.py  sky.py  spectral.py  src.py  sun.py  utils.py
src/data/: S11_eigsep_bowtie_v000.npz  bandpass.npz
tests/: test_beam.py  test_bloom_sim.py  test_coord.py  test_healpix.py  test_models.py  test_observers.py  test_sim.py  test_src.py
